WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
161905
[css-grid] Too many gaps with trailing collapsing tracks
https://bugs.webkit.org/show_bug.cgi?id=161905
Summary
[css-grid] Too many gaps with trailing collapsing tracks
Sergio Villar Senin
Reported
2016-09-13 04:22:12 PDT
[css-grid] Too many gaps with trailing collapsing tracks
Attachments
Patch
(5.00 KB, patch)
2016-09-13 04:25 PDT
,
Sergio Villar Senin
darin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Sergio Villar Senin
Comment 1
2016-09-13 04:25:19 PDT
Created
attachment 288686
[details]
Patch
Javier Fernandez
Comment 2
2016-09-13 04:34:30 PDT
Comment on
attachment 288686
[details]
Patch The patch looks good.
Sergio Villar Senin
Comment 3
2016-09-15 00:42:36 PDT
Committed
r205954
: <
http://trac.webkit.org/changeset/205954
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug