Source/WebCore/rendering/RenderGrid.cpp
@@ -546,6 +546,12 @@ LayoutUnit RenderGrid::guttersSize(GridTrackSizingDirection direction, unsigned 
             gapAccumulator += gap;
     }
 
+    // The above loop adds one extra gap for trailing collapsed tracks.
+    if (gapAccumulator && isEmptyAutoRepeatTrack(direction, endLine - 1)) {
+        ASSERT(gapAccumulator >= gap);
+        gapAccumulator -= gap;
+    }
+
     // If the startLine is the start line of a collapsed track we need to go backwards till we reach
     // a non collapsed track. If we find a non collapsed track we need to add that gap.
     if (startLine && isEmptyAutoRepeatTrack(direction, startLine)) {
